add task result
1) use __dirname for path in case that the application isn't started under node-simulator folder, e.g. 'node node-simulator/index.js'
2) update pm2 yml file to run task runner
3) autoload collections under lib/api/models folder
4) update data models: 1-to-n for task and taskrunner, 1-to-n for taskrunner and job
5) add task result
