# lib/api/models/job.js
@@ -3,8 +3,8 @@
 var Waterline = require('waterline'),
     uuid = require('node-uuid');
 
-var nodeCollection = Waterline.Collection.extend({
-    identity: 'nodes',
+var jobCollection = Waterline.Collection.extend({
+    identity: 'jobs',
     connection: 'mongo',
     migrate: 'safe',
     attributes: {
@@ -16,11 +16,13 @@ var nodeCollection = Waterline.Collection.extend({
                 return uuid.v4();
             }
         },
-        ip: 'string',
-        mac: 'string',
-        nodeId: 'string',
-        nodegroupId: 'string'
+        status: 'string',
+        description: 'string',
+        executeTime: 'stirng',
+        taskrunner: {
+            model: 'taskrunners'
+        }
     }
 });
 
-module.exports = nodeCollection;
+module.exports = jobCollection;
