# lib/api/models/taskrunner.js
@@ -3,8 +3,8 @@
 var Waterline = require('waterline'),
     uuid = require('node-uuid');
 
-var nodeCollection = Waterline.Collection.extend({
-    identity: 'nodes',
+var taskrunnerCollection = Waterline.Collection.extend({
+    identity: 'taskrunners',
     connection: 'mongo',
     migrate: 'safe',
     attributes: {
@@ -16,11 +16,17 @@ var nodeCollection = Waterline.Collection.extend({
                 return uuid.v4();
             }
         },
-        ip: 'string',
-        mac: 'string',
         nodeId: 'string',
-        nodegroupId: 'string'
+        task: {
+            model: 'tasks'
+        },
+        status: 'string',
+        description: 'string',
+        jobs: {
+            collection: 'jobs',
+            via: 'taskrunner'
+        }
     }
 });
 
-module.exports = nodeCollection;
+module.exports = taskrunnerCollection;
