# lib/api/services/node-service.js
@@ -55,6 +55,7 @@ NodeService.prototype.postTaskByNodegroupId = function(nodegroupId, taskName, st
         var nodeDelay = startDelay;
         _.forEach(nodes, function(n) {
             taskQueue.produce({
+                nodeId: n.id,
                 ip: n.ip,
                 mac: n.mac,
                 taskName: taskName,
@@ -64,7 +65,7 @@ NodeService.prototype.postTaskByNodegroupId = function(nodegroupId, taskName, st
             nodeDelay += delay;
         });
         return waterlineService.tasks.create({
-            taskId: taskId,
+            id: taskId,
             taskName: taskName,
             nodegroupId: nodegroupId
         });
