# lib/api/services/task-service.js
@@ -1,0 +1,12 @@
+'use strict';
+
+var waterlineService = require('./waterline-service');
+
+function TaskService() {
+}
+
+TaskService.prototype.getTaskResultById = function(taskId) {
+    return waterlineService.tasks.findOne({id: taskId}).populate('taskrunners');
+};
+
+module.exports = new TaskService();
